# django-simple-log-viewer

./: .gitignore  LICENSE  MANIFEST.in  README.rst  setup.cfg  setup.py
django_simple_log_viewer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
log_viewer/: apps.py  urls.py  utils.py  views.py
log_viewer/static/log_viewer/js/: 42d5adcbca.js
log_viewer/templates/base/: main_manager.html
log_viewer/templates/log_viewer/: log_body.html  log_home.html
