[metadata]
name = django-simple-log-viewer
version = 0.1
description = A Django app to view project logs.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/yusufoguntola/django-simple-log-viewer
author = Yusuf Oguntola
author_email = yusuf.oguntola@gmail.com
summary = View logs in your django application in a simple but intuitive way.
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 1.5
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=2.6
install_requires =
    Django >= 1.5